# xportstoreiosnew

./: pyproject.toml
.github/workflows/: ios.yml  ipa.yml
src/xportstore/: app.py
src/xportstore/resources/: Contents.json
src/xportstore/resources/AppIcon.appiconset/: Contents.json
