[build-system]
requires = ["briefcase>=0.3.25"]
build-backend = "briefcase.build_system"

[tool.briefcase.app.xportstore]
formal_name = "XPort"
app_name   = "xportstore"
description = "Tekhnika i aksessuary"
sources = ["src/xportstore"]
icon = "src/xportstore/resources/icon.png"
requires = [
    "toga-core==0.4.7",
    "rubicon-objc>=0.4.7",
]

[tool.briefcase.app.xportstore.iOS]
requires = [
    "toga-iOS==0.4.7",
]
minimum_iOS = "13.0"
supports_binaries = true
