[build-system]
requires = ["briefcase>=0.3.25"]
build-backend = "briefcase.build_system"

[tool.briefcase]
# ОБЯЗАТЕЛЬНЫЕ ПОЛЯ — они и потерялись в твоём файле:
project_name = "XPort"
bundle = "ru.xportstore"
version = "0.1.0"
url = "https://xportstore.ru"
license = "Proprietary"
author = "X-Port"
author_email = "support@xportstore.ru"

[tool.briefcase.app.xportstore]
# ASCII-имя, чтобы Sideloadly не ломался
formal_name = "XPort"          # Будет XPort.app
app_name   = "xportstore"      # Имя python-пакета/исполняемого
description = "Tekhnika i aksessuary"
sources = ["src/xportstore"]
icon = "src/xportstore/resources/icon.png"
requires = [
    "toga-core==0.4.7",
    "rubicon-objc>=0.4.7",
]

[tool.briefcase.app.xportstore.iOS]
requires = [
    "toga-iOS==0.4.7",
]
minimum_iOS = "13.0"
supports_binaries = true
